Refactor/ccd 95 (#42)
* [CCD-91] Implement signin and getCourses of Moodle API

* [CCD-91] Split APIs and add pageable filter

* [CCD-91] Change submission id from int to long

* [CCD-91] Use ObjectMapper instead of Gson

* [CCD-91] Reformat code

* [CCD-91] Implement API detect submissions

* [CCD-91] Implement API detect submissions for modify case

* [CCD-91] Change moodle sign in api and format response for course, assign and submission

* [CCD-91] Fix link didn't save reference, remove get reference from DB

* [CCD-95] Refactor database and service, also make submission detection async

* [Feature CCD-95]
Add MoodleLinkRequest.java including moodle url
Persist moodle url to user reference

* [Feature CCD-95]
Include moodle url for each request

* [Feature CCD-95]
Remove moodle url resource

* Remove IServiceQuery.java

* Separate controller methods

* Create factory for autowiring

* Add type to query instruction

* Add query instruction to method

* Remove include highlight in QueryInstruction

* Map RequestParam to Controller

* [Bug]
Add lazy

* [Feature]
Add normalized source_code_field

* [Feature]
Change dto of request

* [CCD-95] Change dto time from ZonedDateTime to timestamp long value, change Assign and Course

* [Feature]
Change request to form

---------

Co-authored-by: haiha <thiensuha01@gmail.com>